testing/errors/nopseudopccontext2.a
	*=$1000
	b = &*	; -> "Un-pseudopc operator '&' has no !pseudopc context."
